tests/macros/duplicate/ask_if_answered.stderr
error: duplicate option `ask_if_answered`
 --> $DIR/ask_if_answered.rs:4:9
  |
4 |         ask_if_answered: todo!(),
  |         ^^^^^^^^^^^^^^^
