tests/macros/duplicate/ask_if_answered.rs
fn main() {
    let q = inquisition::questions![input {
        ask_if_answered: todo!(),
        ask_if_answered: todo!(),
    }];
}
